# veris-memory-core

./: .coveragerc  .env.example  .env.production.template  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  __init__.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: branch-protection.yml  dependabot.yml
.github/scripts/: format_correction.py  process_automation_yaml.py  process_claude_review.py  process_follow_up_issues.py
.github/workflows/: SOTA-Adaptive-Review.yml  build-and-push.yml  build-ci-container.yml  claude-code-review.yml  cve-scan.yml  dependabot-auto-merge.yml  parity-verification.yml  sentinel-comprehensive-tests.yml  trigger-build.yml  witness-ingest.yml  witness-pr-knowledge.yml
config/: .ctxrc.docker.yaml  .ctxrc.yaml  agent-schema.json  production_locked_config.yaml  production_recall_config.env  test_defaults.yaml
contracts/: get_agent_state.json  get_dashboard_metrics.json  get_tool_info.json  list_available_tools.json  list_conflicts.json  list_rejections.json  query_graph.json  rejection_stats.json  resolve_conflict.json  retrieve_context.json  run_verification_tests.json  select_tools.json  store_context.json  stream_dashboard_updates.json  update_scratchpad.json
dockerfiles/: CI_CONTAINER_README.md  Dockerfile  Dockerfile.api  Dockerfile.api.debug  Dockerfile.base  Dockerfile.ci  Dockerfile.flyio  Dockerfile.flyio.single-stage  Dockerfile.python-only  Dockerfile.qdrant  Dockerfile.sentinel  supervisord.conf
docs/: API_REFERENCE.md  ARCHITECTURE_DECISIONS.md
examples/: README.md  hello_world.py  hello_world.sh
ops/: day2-ops.yaml
ops/bootstrap/: qdrant_bootstrap.py
ops/eval/: run_eval.py
ops/smoke/: README.md  deploy_guard.py  smoke_runner.py  veris-smoke-60s.yaml  veris_smoke_report.schema.json
ops/verify/: README.md  ci-cd-gate.sh  manifest_verifier.py  test_dimension_drift.py
schemas/: agent_state_schema.yaml  list_scratchpads_schema.yaml  query_graph_schema.yaml  scratchpad_schema.yaml
schemas/agent-context-template/: README.md
scripts/: api-startup.sh  health-check.sh  init-neo4j-schema.sh  init_neo4j_schema.py  reindex_embeddings.py  run-tests.sh
scripts/sentinel/: cleanup-sentinel-test-data.py
src/: __init__.py  enhancements.md
src/api/: __init__.py  dependencies.py  main.py  middleware.py  models.py  rate_limit_middleware.py
src/audit/: __init__.py  crypto.py  learning.py  models.py  provenance.py  retention.py  service.py  wal.py
src/auth/: rbac.py  token_validator.py
src/backends/: __init__.py  graph_backend.py  kv_backend.py  text_backend.py  vector_backend.py
src/core/: __init__.py  agent_namespace.py  base_component.py  config.py  config_error.py  embedding_config.py  embedding_service.py  error_codes.py  error_handler.py  fact_extractor.py  feature_gates.py  graph_query_expander.py  (+23 more)
tests/: README.md  __init__.py  comprehensive_system_test.py  conftest.py  fix_test_imports.py  load_test_deployment.py  run_all_tests.sh  simulate-t102-failure.py  test-text-extraction.py  test_additional_coverage.py  test_agent_namespace_comprehensive.py  test_agent_namespace_edge_cases.py  test_auth_rbac.py  test_base_component_edge_cases.py  test_basic_coverage.py  test_basic_coverage_boost.py  test_ci_container_integration.py  test_claude_workflow_success.py  test_collection_name_consistency.py  test_command_injection_final.py  test_config_and_utils_comprehensive.py  test_config_validator_comprehensive.py  test_config_validator_deep.py  test_context_kv_deep.py  test_context_kv_isolated.py  test_core_components.py  test_core_monitoring.py  test_core_monitoring_comprehensive.py  test_core_monitoring_simple.py  test_coverage_detection_working.py  test_cross_agent_isolation.py  test_cypher_final.py  test_cypher_validator_complex.py  test_cypher_validator_comprehensive.py  test_dashboard_endpoints.py  test_data_models_comprehensive.py  test_docker_build.py  test_embedding_config_loading.py  test_embedding_service.py  test_embedding_service_comprehensive.py  (+81 more)
(+379 files in other folders)
